--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
  
-  <p>&amp; Hello my name is Keyla Calle.</p>
+  <p> Hello my name is Keyla Calle.</p>
   
   <p>&amp; I am a ITM major and I want to explore software development.</p>
   
